--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <script src="https://kit.fontawesome.com/ee3d08c0a8.js" crossorigin="anonymous"></script>
     <title>Pab Michelini</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -65,8 +66,13 @@
         </p>
         <h3>MY SKILLS</h3>
         <ul>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-linkedin"></i>
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3-alt"></i>
+          <i class="fa-brands fa-js"></i>
+          <i class="fa-brands fa-react"></i>
+          <i class="fa-brands fa-node-js"></i>
+          <i class="fa-solid fa-database"></i>
+          <i class="fa-solid fa-gem"></i>
         </ul>
       </div>
     </div>
