--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <!--nav - responsive menu-->
     <div class="nav-container">
       <nav class="navbar">
-        <h1 id="navbar-logo">PABLO MICHELINI.</h1>
+        <h1 id="navbar-logo">PAB MICHELINI.</h1>
         <div class="menu-toggle active" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="nav-menu">
-          <li><a href="#about-container" class="nav-links">ABOUT</a></li>
-          <li><a href="#skills-container" class="nav-links">SKILLS</a></li>
-          <li><a href="#projects-container" class="nav-links">PROJECTS</a></li>
+          <li><a href="#about-skills-section-container" class="nav-links">ABOUT</a></li>
+          <li><a href="#about-skills-section-container" class="nav-links">SKILLS</a></li>
+          <li><a href="#projects-section-container" class="nav-links">PROJECTS</a></li>
         </ul>
       </nav>
     </div>
@@ -53,7 +53,7 @@
       <img class="main-section-image" src="images/pab-image.jpeg" alt="profile-image" />
     </div>
     <!--about and skill section -->
-    <div class="about-skills-section-container">
+    <div class="about-skills-section-container" id="about-skills-section-container">
       <div class="about-skill-section-image">
         <img class="about-skill-section-imagepic" src="images/pab-image-2.jpeg" alt="about-image" />
       </div>
@@ -64,7 +64,7 @@
           dicta earum aperiam expedita minus incidunt necessitatibus quos pariatur architecto
           explicabo quo molestiae, accusamus iusto cum dolorem quae!
         </p>
-        <h3>MY SKILLS</h3>
+        <h3>MY TECHNICAL SKILLS</h3>
         <ul>
           <i class="fa-brands fa-html5"></i>
           <i class="fa-brands fa-css3-alt"></i>
@@ -76,6 +76,14 @@
         </ul>
       </div>
     </div>
+    <!--projects section -->
+    <div class="projects-section-container" id="projects-section-container">
+      <h1 class="projects-section-title">MY RECENTS PROJECTS</h1>
+      <ul class="projects-list-container" id="projects-list-container"></ul>
+    </div>
+    <!--footer-->
+    <footer><p>Pablo Michelini - Web Developer</p></footer>
+    <script src="projects.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
