added dinamic projects and new navar links

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <ul class="nav-menu">
           <li><a href="#about-skills-section-container" class="nav-links">ABOUT</a></li>
           <li><a href="#about-skills-section-container" class="nav-links">SKILLS</a></li>
+          <li><a href="https://onthecodeblog.herokuapp.com" class="nav-links">BLOG</a></li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" class="nav-links"
+              >VIDEOS</a
+            >
+          </li>
           <li><a href="#projects-section-container" class="nav-links">PROJECTS</a></li>
         </ul>
       </nav>
@@ -60,11 +66,16 @@
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae provident praesentium ut
-          dicta earum aperiam expedita minus incidunt necessitatibus quos pariatur architecto
-          explicabo quo molestiae, accusamus iusto cum dolorem quae!
+          I am a web developer in constant growth, passionate about software development. I seek new
+          challenges, research and improve daily. I love working on development projects where I can
+          apply my knowledge to meet the objectives and achieve better user experience.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
+        <p>
+          I focus mainly on Front end work where I have strong skills in Javascript and reactJs
+          technologies. But I also have knowledge in the back end where I can understand and work
+          with nodeJs and Ruby on rails, as well as databases.
+        </p>
         <ul>
           <i class="fa-brands fa-html5"></i>
           <i class="fa-brands fa-css3-alt"></i>
@@ -78,7 +89,7 @@
     </div>
     <!--projects section -->
     <div class="projects-section-container" id="projects-section-container">
-      <h1 class="projects-section-title">MY RECENTS PROJECTS</h1>
+      <h1 class="projects-section-title">MY RECENT PROJECTS</h1>
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
     <!--footer-->
