added text in about

--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          I am a web developer in constant growth, passionate about software development. I seek new
-          challenges, research and improve daily. I love working on development projects where I can
-          apply my knowledge to meet the objectives and achieve better user experience.
+          I am a web developer in constant growth, passionate about software development. I look for
+          new challenges, research and improve daily. I love working on development projects where I
+          can apply my knowledge to meet the objectives and achieve a better user experience. I
+          enjoy working in dynamic environments and sharing knowledge.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
         <p>
           I focus mainly on Front end work where I have strong skills in Javascript and reactJs
           technologies. But I also have knowledge in the back end where I can understand and work
-          with nodeJs and Ruby on rails, as well as databases.
+          with nodeJs with Express and Ruby on rails, as well as databases as MongoDB and
+          PostgreSQL.
         </p>
         <ul>
           <i class="fa-brands fa-html5"></i>
