added new icons in about

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          I am a web developer in constant growth, passionate about software development. I look for
-          new challenges, research and improve daily. I love working on development projects where I
-          can apply my knowledge to meet the objectives and achieve a better user experience. I
-          enjoy working in dynamic environments and sharing knowledge.
+          I am a web developer in constant growth. Passionate about software development, I look for
+          new challenges, researching and improving on a daily basis. I love working on development
+          projects where I can apply my knowledge to meet the objetives and achive a better user
+          experience. I enjoy working in dynamic environments and sharing knowledge.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
         <p>
-          I focus mainly on Front end work where I have strong skills in Javascript and reactJs
+          I focus mainly on Front end work where I have strong skills in Javascript and ReactJs
           technologies. But I also have knowledge in the back end where I can understand and work
           with nodeJs with Express and Ruby on rails, as well as databases as MongoDB and
           PostgreSQL.
@@ -81,12 +81,17 @@
         <ul>
           <i class="fa-brands fa-html5"></i>
           <i class="fa-brands fa-css3-alt"></i>
+          <i class="fa-brands fa-git-alt"></i>
           <i class="fa-brands fa-js"></i>
           <i class="fa-brands fa-react"></i>
           <i class="fa-brands fa-node-js"></i>
           <i class="fa-solid fa-database"></i>
           <i class="fa-solid fa-gem"></i>
         </ul>
+        <p>
+          HTML - CSS - Git - Javascript - ReactJs - NodeJs - Express - MongoDB - Ruby on Rails -
+          PostgreSQL
+        </p>
       </div>
     </div>
     <!--projects section -->
