added contact link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             >
           </li>
           <li><a href="#projects-section-container" class="nav-links">PROJECTS</a></li>
+          <li class="nav-links" id="contact">CONTACT</li>
         </ul>
       </nav>
     </div>
@@ -58,6 +59,10 @@
       </div>
       <img class="main-section-image" src="images/pab-image.jpeg" alt="profile-image" />
     </div>
+
+    <!--modal content-->
+    <div id="form-modal-container" class="form-modal-container"></div>
+
     <!--about and skill section -->
     <div class="about-skills-section-container" id="about-skills-section-container">
       <div class="about-skill-section-image">
