new project added

--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://kit.fontawesome.com/ee3d08c0a8.js" crossorigin="anonymous"></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-    ></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <script type="text/javascript">
       emailjs.init("gCBjK_qQC8VIA3mqk");
@@ -40,26 +34,28 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-menu">
-          <li><a href="#about-skills-section-container" class="nav-links">ABOUT</a></li>
-          <li><a href="#about-skills-section-container" class="nav-links">SKILLS</a></li>
-          <li><a href="https://onthecodeblog.herokuapp.com" class="nav-links">BLOG</a></li>
           <li>
-            <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" class="nav-links"
-              >VIDEOS</a
-            >
+            <a href="#about-skills-section-container" class="nav-links">ABOUT</a>
           </li>
-          <li><a href="#projects-section-container" class="nav-links">PROJECTS</a></li>
+          <li>
+            <a href="#about-skills-section-container" class="nav-links">SKILLS</a>
+          </li>
+          <li>
+            <a href="https://onthecodeblog.herokuapp.com" class="nav-links">BLOG</a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" class="nav-links">VIDEOS</a>
+          </li>
+          <li>
+            <a href="#projects-section-container" class="nav-links">PROJECTS</a>
+          </li>
           <li class="nav-links" id="contact">CONTACT</li>
         </ul>
       </nav>
     </div>
 
     <!--Alert content for emails -->
-    <div
-      id="showAlert"
-      class="flash flash-success alert alert-dismissible fade show"
-      role="alert"
-    ></div>
+    <div id="showAlert" class="flash flash-success alert alert-dismissible fade show" role="alert"></div>
 
     <!--modal content form section-->
     <div id="form-modal-container" class="form-modal-container">
@@ -72,12 +68,7 @@
 
         <div class="field">
           <label for="email_id">Your Email</label>
-          <input
-            type="text"
-            name="email_id"
-            id="email_id"
-            placeholder="Please be sure your email is correct.."
-          />
+          <input type="text" name="email_id" id="email_id" placeholder="Please be sure your email is correct.." />
         </div>
 
         <div class="field">
@@ -103,9 +94,7 @@
         <h2>WEB DEVELOPER</h2>
         <ul>
           <a href="https://github.com/pab-mich/"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/pabloagustinmichelini/"
-            ><i class="fab fa-linkedin"></i
-          ></a>
+          <a href="https://www.linkedin.com/in/pabloagustinmichelini/"><i class="fab fa-linkedin"></i></a>
         </ul>
       </div>
       <img class="main-section-image" src="images/pab-image.jpeg" alt="profile-image" />
@@ -114,22 +103,21 @@
     <!--about and skill section -->
     <div class="about-skills-section-container" id="about-skills-section-container">
       <div class="about-skill-section-image">
-        <img class="about-skill-section-imagepic" src="images/pab-image-2.jpeg" alt="about-image" />
+        <img class="about-skill-section-imagepic" src="images/pabimagecomputer.jpeg" alt="about-image" />
       </div>
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          I am a web developer in constant growth. Passionate about software development, I look for
-          new challenges, researching and improving on a daily basis. I love working on development
-          projects where I can apply my knowledge to meet the objetives and achive a better user
-          experience. I enjoy working in dynamic environments and sharing knowledge.
+          I am a web developer in constant growth. Passionate about software development, I look for new challenges,
+          researching and improving on a daily basis. I love working on development projects where I can apply my
+          knowledge to meet the objetives and achive a better user experience. I enjoy working in dynamic environments
+          and sharing knowledge.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
         <p>
-          I focus mainly on Front end work where I have strong skills in Javascript and ReactJs
-          technologies. But I also have knowledge in the back end where I can understand and work
-          with nodeJs with Express and Ruby on rails, as well as databases as MongoDB and
-          PostgreSQL.
+          I focus mainly on Front end work where I have strong skills in Javascript and ReactJs technologies. But I also
+          have knowledge in the back end where I can understand and work with nodeJs with Express and Ruby on rails, as
+          well as databases as MongoDB and PostgreSQL.
         </p>
         <ul>
           <i class="fa-brands fa-html5"></i>
@@ -141,10 +129,7 @@
           <i class="fa-solid fa-database"></i>
           <i class="fa-solid fa-gem"></i>
         </ul>
-        <p>
-          HTML - CSS - Git - Javascript - ReactJs - NodeJs - Express - MongoDB - Ruby on Rails -
-          PostgreSQL
-        </p>
+        <p>HTML - CSS - Git - Javascript - ReactJs - NodeJs - Express - MongoDB - Ruby on Rails - PostgreSQL</p>
       </div>
     </div>
 
