--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <script type="text/javascript">
       emailjs.init("gCBjK_qQC8VIA3mqk");
     </script>
-    <title>Pab Michelini</title>
+    <title>Pab Mchn.</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!--nav - responsive menu-->
     <div class="nav-container">
       <nav class="navbar">
-        <h1 id="navbar-logo">PAB MICHELINI.</h1>
+        <h1 id="navbar-logo">PAB MCHN.</h1>
         <div class="menu-toggle active" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -86,18 +86,20 @@
         <input type="submit" id="button" value="Send Email" />
       </form>
     </div>
+    <!--section video-->
+    <video autoplay muted loop id="myVideo">
+      <source src="images/smoke.mp4" type="video/mp4" />
+    </video>
 
-    <!--main section-->
+     <!--main section-->
     <div class="main-section-container">
       <div class="main-section-text">
-        <h1>PABLO MICHELINI</h1>
-        <h2>WEB DEVELOPER</h2>
+        <h1>PABLO MCHN</h1>
+        <h2>WEB DEVELOPER & CONTENT CREATOR</h2>
         <ul>
-          <a href="https://github.com/pab-mich/"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/pabloagustinmichelini/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/pab-mchn/"><i class="fab fa-github"></i></a>
+          <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw"><i class="fab fa-youtube"></i></a>
         </ul>
-      </div>
-      <img class="main-section-image" src="images/pab-image.jpeg" alt="profile-image" />
     </div>
 
     <!--about and skill section -->
@@ -108,10 +110,7 @@
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          I am a web developer in constant growth. Passionate about software development, I look for new challenges,
-          researching and improving on a daily basis. I love working on development projects where I can apply my
-          knowledge to meet the objetives and achive a better user experience. I enjoy working in dynamic environments
-          and sharing knowledge.
+          Hello, if I have to say something short about me, I would say that I am passionate about technology, particularly web development. As a north I am always motivated to generate ideas and make them happen! I love to share knowledge with other people and be part of new projects where I can apply my knowledge and keep growing.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
         <p>
