--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
             <a href="#about-skills-section-container" class="nav-links">SKILLS</a>
           </li>
           <li>
-            <a href="https://onthecodeblog.herokuapp.com" class="nav-links">BLOG</a>
-          </li>
-          <li>
             <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" class="nav-links">VIDEOS</a>
           </li>
           <li>
@@ -83,7 +80,7 @@
           ></textarea>
         </div>
 
-        <input type="submit" id="button" value="Send Email" />
+        <input type="submit" id="button" value="Send Message" />
       </form>
     </div>
     <!--section video-->
@@ -104,9 +101,6 @@
 
     <!--about and skill section -->
     <div class="about-skills-section-container" id="about-skills-section-container">
-      <div class="about-skill-section-image">
-        <img class="about-skill-section-imagepic" src="images/pabimagecomputer.jpeg" alt="about-image" />
-      </div>
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
@@ -134,7 +128,7 @@
 
     <!--projects section -->
     <div class="projects-section-container" id="projects-section-container">
-      <h1 class="projects-section-title">MY RECENT PROJECTS</h1>
+      <h1 class="projects-section-title">MY PROJECTS & EXPIRIENCE</h1>
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
 
