--- a/index.html
+++ b/index.html
@@ -55,34 +55,8 @@
     <div id="showAlert" class="flash flash-success alert alert-dismissible fade show" role="alert"></div>
 
     <!--modal content form section-->
-    <div id="form-modal-container" class="form-modal-container">
-      <form id="form" class="form-modal-content">
-        <h3>Thanks for your contact</h3>
-        <div class="field">
-          <label for="from_name">Your Name</label>
-          <input type="text" name="from_name" id="from_name" />
-        </div>
-
-        <div class="field">
-          <label for="email_id">Your Email</label>
-          <input type="text" name="email_id" id="email_id" placeholder="Please be sure your email is correct.." />
-        </div>
-
-        <div class="field">
-          <label for="message">Your Message</label>
-          <textarea
-            rows="4"
-            cols="35"
-            name="message"
-            id="message"
-            class="message"
-            placeholder="Here you can write whatever you want!. i will receive an email and i will get back to you soon..."
-          ></textarea>
-        </div>
-
-        <input type="submit" id="button" value="Send Message" />
-      </form>
-    </div>
+    <div id="form-modal-container" class="form-modal-container"></div>
+        
     <!--section video-->
     <video autoplay muted loop id="myVideo">
       <source src="images/smoke.mp4" type="video/mp4" />
