format page and functionality

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
             <a href="#about-skills-section-container" class="nav-links">ABOUT</a>
           </li>
           <li>
-            <a href="#about-skills-section-container" class="nav-links">SKILLS</a>
-          </li>
-          <li>
             <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" class="nav-links">VIDEOS</a>
           </li>
           <li>
@@ -68,8 +65,9 @@
         <h1>PABLO MCHN</h1>
         <h2>WEB DEVELOPER & CONTENT CREATOR</h2>
         <ul>
-          <a href="https://github.com/pab-mchn/"><i class="fab fa-github"></i></a>
-          <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw"><i class="fab fa-youtube"></i></a>
+          <a href="https://github.com/pab-mchn/"><i class="fab fa-github main-icon" id="main-github"></i></a>
+          <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw"><i class="fab fa-youtube main-icon" id="main-youtube"></i></a>
+          <i class="fa fa-envelope main-icon" id="main-email"></i>
         </ul>
     </div>
 
@@ -78,7 +76,7 @@
       <div class="about-skill-section-text">
         <h1>Hi,</h1>
         <p>
-          Hello, if I have to say something short about me, I would say that I am passionate about technology, particularly web development. As a north I am always motivated to generate ideas and make them happen! I love to share knowledge with other people and be part of new projects where I can apply my knowledge and keep growing.
+          If I have to say something short about me, I would say that I am passionate about technology, particularly web development. As a north I am always motivated to generate ideas and make them happen! I love to share knowledge with other people and be part of new projects where I can apply my knowledge and keep growing.
         </p>
         <h3>MY TECHNICAL SKILLS</h3>
       
@@ -103,7 +101,7 @@
     </div>
 
     <!--footer-->
-    <footer><p>Pablo Michelini - Web Developer</p></footer>
+    <footer><p>Pablo Mchn - Web Developer & Content Creator</p></footer>
     <script src="./js/projects.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/contact.js"></script>
