--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <div id="form-modal-container" class="form-modal-container"></div>
         
     <!--section video-->
-    <video autoplay muted loop id="myVideo">
-      <source src="images/smoke.mp4" type="video/mp4" />
-    </video>
+    <!-- <video autoplay muted loop id="myVideo">
+      <source src="images/smoke.mp4" />
+    </video> -->
 
      <!--main section-->
     <div class="main-section-container">
