--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <!--projects section -->
     <div class="projects-section-container" id="projects-section-container">
-      <h1 class="projects-section-title">MY PROJECTS & EXPIRIENCE</h1>
+      <h1 class="projects-section-title">PROJECTS & EXPIRIENCE</h1>
 
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
