redisign in main section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <!--Main section-->
     <div class="main-section-container">
       <div class="main-section-text-container">
-        <h1>Hi! I'm</h1>
-        <h1>Pablo Michelini,</h1>
+        <h1>Hi!</h1>
+        <h1>I'm Pablo</h1>
+        <h1></h1>
         <h2>Web Developer & content Creator</h2>
         <div class="main-section-contact-button">
           <a class="btn btn-gradient" href="mailto:pab.michelini@gmail.com">Contact Me</a>
