main section ui adaption

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
 
+    <!--footer-->
+
     <script src="particles.js"></script>
     <script src="app.js"></script>
     <script src="./js/projects.js"></script>
