animation in main section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       </nav>
     </div>
     <div id="particles-js"></div>
+
+    <img id="falcon" src="reverse_spacegif.gif" />
+    <img id="astronaut" src="reverse_spacegif.gif" />
+
     <!--Main section-->
     <div class="main-section-container">
       <div class="main-section-text-container">
