--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
     <div id="particles-js"></div>
 
-    <img id="falcon" src="reverse_spacegif.gif" />
-    <img id="astronaut" src="reverse_spacegif.gif" />
+    <img id="astronaut-fly" src="reverse_spacegif.gif" />
+    <img id="astronaut-jump" src="reverse_spacegif.gif" />
 
     <!--Main section-->
     <div class="main-section-container">
@@ -62,8 +62,9 @@
       </div>
     </div>
     <!--projects section -->
+
     <div class="projects-section-container" id="projects-section-container">
-      <h1 class="projects-section-title">PROJECTS & EXPIRIENCE</h1>
+      <h1 class="projects-section-title">SOME PROJECTS & EXPIRIENCES</h1>
 
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
@@ -74,5 +75,6 @@
     <script src="app.js"></script>
     <script src="./js/projects.js"></script>
     <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
