--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://kit.fontawesome.com/ee3d08c0a8.js" crossorigin="anonymous"></script>
     <title>Pab Mchn.</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--nav - responsive menu-->
@@ -46,8 +46,7 @@
     </div>
     <div id="particles-js"></div>
 
-    <img id="astronaut-fly" src="reverse_spacegif.gif" />
-    <img id="astronaut-jump" src="reverse_spacegif.gif" />
+    <img id="astronaut-fly" src="media/space-guy.gif" />
 
     <!--Main section-->
     <div class="main-section-container">
@@ -71,8 +70,8 @@
 
     <!--footer-->
 
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <script src="./js/particles.js"></script>
+    <script src="./js/appParticles.js"></script>
     <script src="./js/projects.js"></script>
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
