redisign ui for projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Special+Elite&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
@@ -60,11 +64,21 @@
         </div>
       </div>
     </div>
+
     <!--projects section -->
+    <h1 class="projects-section-title" id="projects-section-container">SOME PROJECTS & EXPIRIENCES</h1>
 
-    <div class="projects-section-container" id="projects-section-container">
-      <h1 class="projects-section-title">SOME PROJECTS & EXPIRIENCES</h1>
+    <div class="main-projects-section-container" id="main-projects-section-container">
+      <ul class="main-projects-list-item" id="main-projects-list-container"></ul>
+    </div>
 
+    <div class="projects-section-navegation-container">
+      <i class="fa-solid fa-angle-left" id="navegation-arrow-left"></i>
+      <h2>PROJECTS IN TEAM</h2>
+      <i class="fa-solid fa-angle-right" id="navegation-arrow-right"></i>
+    </div>
+
+    <div class="projects-section-container">
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
 
