new styles in project section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="projects-section-navegation-container">
       <i class="fa-solid fa-angle-left" id="navegation-arrow-left"></i>
-      <h2>PROJECTS IN TEAM</h2>
+      <h2>TEAM PROJECTS</h2>
       <i class="fa-solid fa-angle-right" id="navegation-arrow-right"></i>
     </div>
 
