about section templete

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </div>
         <ul class="nav-menu">
           <li>
+            <a href="#about-section-container" class="nav-links"
+              >ABOUT&SKILLS</a
+            >
+          </li>
+          <li>
             <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" target="_blank" class="nav-links"
               >VIDEOS</a
             >
@@ -50,7 +55,7 @@
     </div>
     <div id="particles-js"></div>
 
-    <img id="astronaut-fly" src="media/space-guy.gif" />
+    <img id="astronaut-fly" src="media/general/space-guy.gif" />
 
     <!--Main section-->
     <div class="main-section-container">
@@ -62,6 +67,39 @@
         <div class="main-section-contact-button">
           <a class="btn btn-gradient" href="mailto:pab.michelini@gmail.com">Contact Me</a>
         </div>
+      </div>
+    </div>
+
+    <!--About Me-->
+    <div class="about-section-container" id="about-section-container">
+      <div class="about-section-img-container">
+      <img class="about-section-img" src="media/general/image-profile.png" alt="profile" />
+    </div>
+      <div class="about-section-text-container">
+        <h1>About me</h1>
+        <p class="about-section-text">
+          Discovering the world of web development has literally changed my life.
+          Since then I am passionate about sharing knowledge with others, developing websites and being part of new projects where I can apply my knowledge and keep growing.
+          <h1>Skills</h1>
+          <p class="about-section-text">I work mostly on the Front-End with technologies like React js and Typescript. I also have experience creating Back-End in technologies like Ruby on Rails and Nodejs using relational and non-relational databases. </p>
+          <P class="about-section-text">FRONTEND</P>
+
+          <img class="about-section-text-img" src="media/tech-logos/html-5.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/css-3.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/sass.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/js.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/react.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/typescript.png" alt="profile" />
+          <P><small>HTML - CSS - SASS - JAVASCRIPT - REACTJS - TYPESCRIPT</small></P>
+
+          <p class="about-section-text">BACKEND</p>
+          <img class="about-section-text-img" src="media/tech-logos/ruby.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/postgre.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/node.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/express.png" alt="profile" />
+          <img class="about-section-text-img left" src="media/tech-logos/mongoDB.png" alt="profile" />
+          <P><small>RUBY ON RAILS - POSTGRESQL - NODE JS - EXPRESS JS - MONGO DB </small></P>
+        </p>
       </div>
     </div>
 
